--- a/CS2ARonaldAbel_MVCPROJECT/CS2ARonaldAbel_MVCPROJECT.csproj
+++ b/CS2ARonaldAbel_MVCPROJECT/CS2ARonaldAbel_MVCPROJECT.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,11 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Student\AddNewStudent.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CS2ARonaldAbel_MVCPROCECT.BusLogic\CS2ARonaldAbel_MVCPROJECT.BusLogic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Student\AddNewStudent.cshtml" />
   </ItemGroup>
 
 </Project>
